--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "decimal": "0.0.2",
     "express": "^4.16.4",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.7",
